[XForms] Fix namespace issues with submission. Bug 329479, r=doronr+me, patch by surkov@dc.baikal.ru